2009-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct disposition of wchar_t output in printf().

	* mingwex/stdio/pformat.c (__pformat) [%C]: Create new instance of...
	(argval): ...this, in inner scope, with singular type `wchar_t'; use
	it to pass one wchar to __pformat_wputchars(), for output.

2009-07-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* mingwex/stdio/pformat.c: Implement better fix for type punned warning.

2009-07-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Convert to monolithic configuration procedure.

	* configure.in (AC_CHECK_TOOL): All instances; tabulate arguments.
	(AC_SUBST): Use its 2nd argument to initialise MinGW default settings.
	(PACKAGE_TARNAME) [target_os ~ cygwin]: Redefine it as appropriate.
	(W32API_INCLUDE): Redefine; make it relative to `top_srcdir'.
	(CRT0S): Relocate from `profile'; define it as appropriate.
	(LIBM_A): Define and AC_SUBST it unconditionally.
	(AC_CONFIG_SUBDIRS): Remove; none to configure.
	(AC_OUTPUT_FILES): Add `Makefile' for each of...
	(mingwex, profile): ...these subdirectories.

	* configure: Regenerated.

	* Makefile.in (PACKAGE, host_os): Let AC_SUBST define them.
	(top_srcdir, top_builddir): New macros; let AC_SUBST define them.
	(datarootdir): New macro; autoconf > 2.59 wants AC_SUBST to define it.
	(SUBDIRS): Define explicitly, to run recursive `make' in...
	(mingwex, profile): ...these; simplify build commands...
	(rootme, rootsrc): ...without these shell variables.
	(all, subdirs): Delete redundant build commands.
	(FIXME): Flag various issues for follow up.

	* mingwex/Makefile.in (INCLUDES): Redefined macro; refer it to...
	(top_srcdir): ...this new macro; let AC_SUBST define it.
	(top_builddir, datarootdir): New macros; let AC_SUBST define them.
	(Makefile): Make it depend on...
	(top_builddir/config.status): ...this, itself depending on...
	(top_srcdir/configure): ...this.
	(FIXME): Flag various issues for follow up.
