@@ -38,8 +38,8 @@ int __cdecl __MINGW_NOTHROW usleep(useconds_t useconds);
 
 /* This is defined as a real library function to allow autoconf
    to verify its existence. */
-#ifndef __NO_INLINE__
 int ftruncate(int, off_t);
+#ifndef __NO_INLINE__
 __CRT_INLINE int ftruncate(int __fd, off_t __length)
 {
   return _chsize (__fd, __length);
